# rust-web-app

./: Cargo.toml
.cargo/: config.toml
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql
src/: config.rs  error.rs  main.rs
src/log/: mod.rs
src/web/: error.rs  mw_auth.rs  mw_res_map.rs  routes_static.rs
tests/: env_test.rs
