[package]
name = "rust-web-app"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "AwesomeApp rust-web-app."
homepage = "https://awesomeapp.dev"
repository = "https://github.com/awesomeapp-dev/rust-web-app"


[dependencies]
tokio = { version = "1", features = ["full"] }
# -- Json
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Web
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["fs"] }
tower-cookies = "0.10.0"

# -- Data
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "time",
    "postgres",
    "uuid",
] }

# -- Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "local-time",
    "time",
] }
time = { version = "0.3.36", features = ["macros"] }
# -- Others
uuid = { version = "1", features = ["v4", "fast-rng"] }
lazy-regex = "3"
async-trait = "0.1"
strum_macros = "0.26.4"


[dev-dependencies]
anyhow = "1.0.87"
httpc-test = "0.1.1"
